tests/neg-custom-args/captures/leak-i21347.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/leak-i21347.scala:4:15 -----------------------------------
4 |  ops.foreach: op => // error
  |               ^
  |Found:    (op: () ->{any} Unit) ->{any²} Unit
  |Required: (() ->{any²} Unit) => Unit
  |
  |Note that capability `any²` cannot flow into capture set {any}.
  |
  |where:    =>   refers to a root capability created in method runOpsAlt when checking argument to parameter f of method foreach
  |          any  is the root capability caps.any
  |          any² is a root capability in the type of parameter ops
  |
5 |    op()
  |
  | longer explanation available when compiling with `-explain`
